tweak the longer notebooks

--- a/1.JokesDataset.ipynb
+++ b/1.JokesDataset.ipynb
@@ -24,7 +24,8 @@
     "import pandas as pd\n",
     "\n",
     "# Read in the raw jokes dataset\n",
-    "filename = '/opt/tljh/user/share/nlp_punchlines_data/one-million-reddit-jokes.csv'\n",
+    "filename = '/opt/cloudburst/shared/nlp_puchlines/one-million-reddit-jokes.csv'\n",
+    "print('Reading in a lot of jokes...')\n",
     "raw_jokes = pd.read_csv(filename,keep_default_na=False)\n",
     "\n",
     "# Print out the column names with a single example of the data in each column\n",
