--- a/2.FakePunchlines.ipynb
+++ b/2.FakePunchlines.ipynb
@@ -171,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = mtools.generate(model, tokenizer, list(df_mini['prompt'])[:30], use_gpu=False)\n",
+    "output = mtools.generate(model, tokenizer, list(df_mini['prompt'])[:30])\n",
     "print('Done.')"
    ]
   },
