--- a/5.Performance.ipynb
+++ b/5.Performance.ipynb
@@ -99,7 +99,7 @@
     "print('Original model is on {}'.format(model_gpt2.device))\n",
     "\n",
     "# Load our fine-tuned 10-epoch model and put it on the GPU\n",
-    "model_10e = load('models/JokeGen_gpt2_1.00subset_10epochs_2022-01-07.pt')\n",
+    "model_10e = load('models/JokeGen_gpt2.pt')\n",
     "print('Fine-tuned model10 is on {}'.format(model_10e.device))"
    ]
   },
@@ -505,7 +505,7 @@
     "from datasets import Dataset \n",
     "\n",
     "# Load the trained classifier model and tokenizer\n",
-    "classifier_filename = 'models/ClassifyJokes_bert_1.00subset_2021-12-16.pt'\n",
+    "classifier_filename = 'models/ClassifyJokes_bert.pt'\n",
     "\n",
     "# Load the vanilla BERT model, plus its tokenizer\n",
     "class_checkpoint = mtools.load_checkpoint('bert')\n",
@@ -638,7 +638,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13a25398-6831-4ac2-ba28-80d7d07f6b51",
+   "id": "161a60f2-9d89-4395-9f3f-63f3ccaa644a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = 'What do you call a boat full of dentists?'\n",
+    "mtools.generate(model_gpt2, tokenizer, prompt, quiet=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a468525-2ef2-4d4d-9bbe-907d0e8b7af1",
    "metadata": {},
    "outputs": [],
    "source": []
