ensure /data dir exists

--- a/1.JokesDataset.ipynb
+++ b/1.JokesDataset.ipynb
@@ -289,6 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!mkdir -p data\n",
     "print('{:>10} jokes in our final dataset'.format(jokes.shape[0]))\n",
     "\n",
     "train_frac = 0.7  # Use 70% of jokes for training, 30% for testing\n",
@@ -335,14 +336,6 @@
     "jokes_sorted = jokes.sort_values('score',ascending=False)\n",
     "jokes_sorted.iloc[:10]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79a1d982-b104-406a-940a-2675c2fa2cb3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
