--- a/3.PunchlineClassifier.ipynb
+++ b/3.PunchlineClassifier.ipynb
@@ -218,6 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!mkdir -p models\n",
     "model = mtools.train_classifier(tokenized_datasets, model, epochs=3)\n",
     "\n",
     "from datetime import datetime\n",
@@ -262,7 +263,7 @@
     "test_files = ['data/short_jokes_test.csv','data/short_jokes_test_fake.csv']\n",
     "\n",
     "# Set downsample=1 or leave out to train on the full training set (it defaults to 1)\n",
-    "model = train_punchline_classifier(train_files, test_files, downsample=20)  "
+    "model = train_punchline_classifier(train_files, test_files, downsample=100)  "
    ]
   },
   {
@@ -371,14 +372,6 @@
     "    \n",
     "Let's see if GPT-2 can do better once it has been fine-tuned on a set of real jokes."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e727cb6-7bd2-48b2-ad29-77df53ab4176",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
