--- a/5.Performance.ipynb
+++ b/5.Performance.ipynb
@@ -85,7 +85,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "32c75f6a-e059-4371-83ac-2759142b4c48",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import model_tools as mtools\n",
@@ -643,16 +645,8 @@
    "outputs": [],
    "source": [
     "prompt = 'What do you call a boat full of dentists?'\n",
-    "mtools.generate(model_gpt2, tokenizer, prompt, quiet=True)"
+    "mtools.generate(model_10e, tokenizer, prompt, quiet=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a468525-2ef2-4d4d-9bbe-907d0e8b7af1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
